# myelin-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/langchain/: autonomous_agent.py  quickstart.py  react_research_agent.py  requirements.txt  workflow_follower.py
src/myelin_sdk/: __init__.py  _utils.py  client.py  errors.py  redact.py  session.py  sync.py  types.py
src/myelin_sdk/claude_code/: __main__.py  capture.py  setup.py
src/myelin_sdk/integrations/langchain/: __init__.py  handler.py  state.py  toolkit.py  tools.py
src/myelin_sdk/langchain/: __init__.py  handler.py
tests/: conftest.py  test_capture.py  test_client.py  test_langchain_handler.py  test_langchain_toolkit.py  test_langchain_tools.py  test_redact.py  test_session.py  test_setup.py  test_sync.py  test_transcript_parsing.py
