[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myelin-sdk"
version = "0.1.0"
description = "SDK for integrating AI agents with Myelin procedural memory"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]

[project.scripts]
myelin-init = "myelin_sdk.claude_code.setup:init"

[tool.hatch.build.targets.wheel]
packages = ["src/myelin_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"src/myelin_sdk/claude_code" = "myelin_sdk/claude_code"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
