[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myelin-sdk"
version = "0.1.0"
description = "SDK for integrating AI agents with Myelin procedural memory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/yahnyshc/myelin-sdk"
Issues = "https://github.com/yahnyshc/myelin-sdk/issues"

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/myelin_sdk"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
